# pyelevate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  example_requirements.txt
.github/: RELEASE_WORKFLOW.md  SETUP.md  release-please-config.json
.github/workflows/: ci.yml  release.yml
scripts/: generate-changelog.sh
src/: app.rs  changelog.rs  lib.rs  main.rs  models.rs  panels.rs  parser.rs  popularity.rs  pypi.rs  resolver.rs  security.rs  simulator.rs  styles.rs  ui.rs  upgrade.rs
