[package]
name = "pyelevate"
version = "0.1.0"
edition = "2021"
authors = ["PyElevate Contributors"]
description = "Modern Python requirements.txt dependency upgrader with interactive TUI"
license = "MIT"
repository = "https://github.com/pro-grammer-SD/pyelevatee"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
regex = "1.10"
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
fuzzy-matcher = "0.3"
parking_lot = "0.12"
dirs = "5.0"
itertools = "0.12"

[[bin]]
name = "pyelevate"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
