[package]
name = "pyelevate"
version = "0.2.0"
edition = "2021"
authors = ["Soumalya Das <geniussantu1983@gmail.com>"]
description = "Professional-grade Python dependency manager with AI-powered insights, TUI, security scanning, and intelligent upgrade recommendations"
license = "MIT"
repository = "https://github.com/pro-grammer-SD/pyelevate"
homepage = "https://github.com/pro-grammer-SD/pyelevate"
keywords = ["python", "dependencies", "tui", "security", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
regex = "1.10"
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
parking_lot = "0.12"
dirs = "5.0"
itertools = "0.12"
petgraph = "0.6"
url = "2.5"
git2 = "0.19"
toml = "0.8"
lazy_static = "1.4"
once_cell = "1.19"
async-trait = "0.1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
